--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,55 +49,34 @@ input{
   height: 30px;
   font-size: 15px;
   border-radius: 4px;
+  text-align: center;
 }
 .signupform{
 width: 500px;
-height: 500px;
-background-color: blueviolet;
+max-width: 800px;
+height: auto;
+max-height: 800px;
+background-color: #ffffff;
 margin: auto;
+font-size: 20px;
+border-radius: 5px;
+/* font-weight: bold; */
 }
-/* .signupform{
-  background:#3c6382;
-  color:snow;
-  width: 800px;
-  height: 400px;
-  text-align: center;
-  font-weight: bold;
-  border: 6px solid #3c6382;
-  border-radius: 3px;
-  cursor: pointer;
-  height: 35px;
-  text-decoration:none;
-  margin:0px 5px;
-  padding: 3px;
-  transition:0.3s all ease-in-out;
-
-} */
-
-/* .signupform:hover{
-   background:black;
-   border:6px solid black;
-   color: white;
-   box-shadow: 0px 0px 4px #080808;
+h4{
+margin-left: 20px;
 }
-
 .signupform input {
-  margin: 8px auto;
-  text-align: center;
-  width: 320px;
+  width: 300px;
   border:0px;
-  border-top:5px solid #222222;
-  height:40px;
+  height:30px;
   border-radius:4px;
-  background:#cccc;
+   box-shadow: 0px 0px 3px #080808;
+   margin:  10px 10px 10px 50px;
 }
 
 .signupform input:hover{
-  background:rgba(212, 172, 172, 0.933);
+  background:#329e77;
 }
-.signupform input:focus{
-  background:#eeee;
-}   */
 /*end regester form*/
 .btn{
 width: 70px;
@@ -117,9 +96,12 @@ align-items: center;
   color: #222222;
 }
 main{
-  height: 450px;
+  height:auto ;
+  max-height:600px ;
 }
-
+.mainn{
+  height:450px ;
+}
 footer {
 background-color:black; 
 z-index:99;
